v1.5.2 - Refactoring and Perfomance Update