@@ -1,295 +1,106 @@
-# AfterLanguage
+﻿# AfterLanguage
 
-Enterprise-grade i18n (internationalization) plugin for the AfterLands Minecraft ecosystem.
+AfterLanguage is an enterprise i18n plugin for the AfterLands Minecraft ecosystem (Spigot 1.8.8, Java 21).
 
-## 🎯 Features
+## Current Version
 
-### Core i18n System
-- **Provider Pattern Integration**: Seamlessly integrates with AfterCore's MessageService
-- **Three-Tier Caching**: L1 hot cache, L2 in-memory registry, L3 template cache
-- **Hot-Reload**: Reload translations without server restart
-- **Per-Player Languages**: Each player sees content in their preferred language
-- **Fallback Chain**: player language → default language → key literal
-- **Performance**: < 0.01ms L1 cache hits, 20 TPS @ 500+ CCU
+- Plugin: `1.5.2`
+- Build target: `Java 21 --enable-preview`
+- Hard dependency: `AfterCore` (built against `1.5.6`, recommended runtime `1.5.2+`)
 
-### Advanced Features (v1.2.0+)
-- **ICU Pluralization**: Full plural forms support (ZERO, ONE, TWO, FEW, MANY, OTHER)
-- **Dynamic Content API**: Runtime translation management with CRUD operations
-- **Export/Import**: YAML export/import with plural forms preservation
-- **Backup System**: Automatic timestamped backups with rotation
+## Core Capabilities
 
-### Crowdin Integration (v1.3.0) 🆕
-- **Bidirectional Sync**: Automatic sync between local files and Crowdin
-- **Webhook Support**: Real-time updates via Crowdin webhooks
-- **Auto-Sync Scheduler**: Configurable periodic sync
-- **Conflict Resolution**: Smart merge strategies (crowdin-wins/local-wins/manual)
-- **Redis Multi-Server**: Sync events propagated across server network
+- Per-player language preference with async persistence
+- Three-tier translation cache (L1 hot, L2 registry, L3 compiled templates)
+- Hot-reload for namespace/all translations
+- Dynamic translation API (CRUD + plural forms)
+- Crowdin bidirectional sync (upload/download/sync/status/cleanup)
+- ProtocolLib client locale detection (optional)
+- PlaceholderAPI expansion and message placeholder processing (optional)
+- Redis sync broadcast support (optional)
 
-### Integrations
-- **Config Scanner**: Automatically extract translatable keys from YAML configs
-- **ProtocolLib**: Auto-detect client locale on join
-- **PlaceholderAPI**: `%afterlang_*%` placeholders for legacy plugins
-- **MySQL Persistence**: Player language preferences and dynamic translations
-- **Redis**: Multi-server sync support
-- **Observability**: Full metrics integration with AfterCore MetricsService
+## Commands
 
-## 📝 Commands
+### Player (`/lang`)
 
-### Player Commands (`/lang`)
-- `/lang` - Open GUI language selector
-- `/lang set <language>` - Change your language
-- `/lang list` - List available languages
-- `/lang info` - Show current language info
+- `/lang`
+- `/lang gui`
+- `/lang set <language>`
+- `/lang list`
+- `/lang info`
 
-### Admin Commands (`/afterlang`)
+### Admin (`/afterlang` or `/alang`)
 
-**Basic:**
-- `/afterlang` - Show plugin statistics
-- `/afterlang reload [namespace]` - Hot-reload translations
-- `/afterlang stats` - Detailed statistics
-- `/afterlang cache` - Cache hit/miss rates
+- `/afterlang`
+- `/afterlang reload [namespace]`
+- `/afterlang stats`
+- `/afterlang cache`
+- `/afterlang dynamic create <namespace> <key> <language> <text>`
+- `/afterlang dynamic update <namespace> <key> <language> <text>`
+- `/afterlang dynamic delete <namespace> <key> <language>`
+- `/afterlang dynamic list <namespace> [language]`
+- `/afterlang dynamic reload <namespace>`
+- `/afterlang export <namespace> [language] [outputDir]`
+- `/afterlang import <file> <targetFile>`
+- `/afterlang backup create <namespace>`
+- `/afterlang backup list [namespace]`
+- `/afterlang backup restore <backupId> <namespace>`
+- `/afterlang backup delete <backupId>`
+- `/afterlang crowdin sync [namespace]`
+- `/afterlang crowdin upload [namespace]`
+- `/afterlang crowdin download [namespace]`
+- `/afterlang crowdin uploadtranslation <language> <namespace>`
+- `/afterlang crowdin status`
+- `/afterlang crowdin test`
+- `/afterlang crowdin cleanup [--confirm]`
 
-**Dynamic Content:**
-- `/afterlang dynamic create <namespace> <key> <language> <text>` - Create translation
-- `/afterlang dynamic delete <namespace> <key> <language>` - Delete translation
-- `/afterlang dynamic list <namespace> [language]` - List translations
-- `/afterlang dynamic reload <namespace>` - Reload namespace
-
-**Export/Import:**
-- `/afterlang export <namespace> [language] [outputDir]` - Export to YAML
-- `/afterlang import <namespace> <language> <file> [overwrite]` - Import from YAML
-
-**Backup:**
-- `/afterlang backup create <namespace>` - Create backup
-- `/afterlang backup list [namespace]` - List backups
-- `/afterlang backup restore <backupId> <namespace>` - Restore backup
-- `/afterlang backup delete <backupId>` - Delete backup
-
-**Crowdin (v1.3.0):** 🆕
-- `/afterlang crowdin sync [namespace]` - Full bidirectional sync
-- `/afterlang crowdin upload [namespace]` - Upload to Crowdin
-- `/afterlang crowdin download [namespace]` - Download from Crowdin
-- `/afterlang crowdin status` - Show integration status
-- `/afterlang crowdin test` - Test API connection
-
-## 👨‍💻 For Developers
-
-### Using AfterLanguage via AfterCore
+## Development Integration (AfterCore)
 
 ```java
 MessageService messages = AfterCore.get().messages();
 
-// Simple message
 messages.send(player,
     MessageKey.of("myplugin", "welcome"),
-    Placeholder.of("player", player.getName())
-);
+    Placeholder.of("player", player.getName()));
 
-// With pluralization (v1.2.0+)
-messages.send(player,
-    MessageKey.of("myplugin", "items.count"),
-    Placeholder.of("count", itemCount)
-);
-
-// Bulk messages
-messages.sendBulk(player,
-    MessageKey.of("myplugin", "line1"),
-    MessageKey.of("myplugin", "line2")
-);
-
-// Broadcast to all players (in their language)
-messages.broadcast(MessageKey.of("myplugin", "server.restart"));
+String title = messages.getOrDefault(player, MessageKey.of("myplugin", "gui.main.title"), "Default GUI Title");
 ```
 
-### Translation Files
-
-Create files in `plugins/AfterLanguage/languages/<lang>/<namespace>/`:
-
-```yaml
-# pt_br/myplugin/messages.yml
-welcome: "&aWelcome {player}!"
-goodbye: "&cGoodbye {player}!"
-
-# Pluralization (v1.2.0+)
-items:
-  count:
-    text: "{count} items"
-    plural:
-      one: "{count} item"
-      other: "{count} items"
-```
-
-### In Inventory YAMLs
-
-AfterCore's InventoryService supports `{lang:...}` pattern:
-
-```yaml
-items:
-  welcome:
-    name: "{lang:myplugin:items.welcome.name}"
-    lore:
-      - "{lang:myplugin:items.welcome.lore}"  # Multi-line support
-```
-
-### Dynamic Content API (v1.2.0+)
-
-Runtime translation management:
+Register plugin namespace using AfterCore `MessageService` provider:
 
 ```java
-DynamicContentAPI api = PluginRegistry.get().getDynamicContentAPI();
-
-// Create translation
-api.createTranslation("myplugin", "dynamic.key", "en_us", "Dynamic text")
-   .thenAccept(translation -> {
-       plugin.getLogger().info("Translation created!");
-   });
-
-// Update translation
-api.updateTranslation(updatedTranslation).join();
-
-// Delete translation
-api.deleteTranslation("myplugin", "dynamic.key", "en_us").join();
-
-// Get all translations
-List<Translation> all = api.getAllFromNamespace("myplugin").join();
+messages.registerNamespace(this, "myplugin");
 ```
 
-### Crowdin API (v1.3.0) 🆕
+Expected source files in your plugin data folder:
 
-Programmatic Crowdin sync:
+- `messages.yml` -> extracted to `languages/<lang>/<namespace>/messages.yml`
+- `inventories.yml` -> extracted to `languages/<lang>/<namespace>/gui.yml`
 
-```java
-CrowdinAPI crowdin = PluginRegistry.get().getCrowdinAPI();
-
-// Full sync
-crowdin.sync(Optional.of("myplugin"))
-       .thenAccept(result -> {
-           logger.info("Uploaded: " + result.uploadedStrings());
-           logger.info("Downloaded: " + result.downloadedStrings());
-           logger.info("Conflicts: " + result.conflicts());
-       });
-
-// Upload only
-crowdin.uploadTranslations("myplugin").join();
-
-// Download only
-crowdin.downloadTranslations("myplugin").join();
-```
-
-## 🔧 Configuration
-
-### Basic Setup (`config.yml`)
-
-```yaml
-default-language: pt_br
-enabled-languages:
-  - pt_br
-  - en_us
-  - es_es
-
-detection:
-  auto-detect: true
-  delay-ticks: 40
-
-cache:
-  l1:
-    max-size: 10000
-    ttl-minutes: 30
-  l3:
-    max-size: 5000
-    ttl-minutes: 60
-
-backup:
-  enabled: true
-  max-backups: 10
-```
-
-### Crowdin Setup (`crowdin.yml` or `config.yml`)
-
-```yaml
-crowdin:
-  enabled: true
-  project-id: "${CROWDIN_PROJECT_ID}"
-  api-token: "${CROWDIN_API_TOKEN}"
-  source-language: pt-BR
-
-  auto-sync-interval-minutes: 30
-
-  webhook:
-    enabled: true
-    port: 8432
-    secret: "${CROWDIN_WEBHOOK_SECRET}"
-
-  conflict-resolution: crowdin-wins  # crowdin-wins | local-wins | manual
-  backup-before-sync: true
-  approved-only: true
-```
-
-## 🏗️ Building
+## Build
 
 ```bash
 mvn clean package
-# Output: target/AfterLanguage-1.3.0.jar
 ```
 
-Auto-copies to `C:/Users/icega/OneDrive/Área de Trabalho/AfterCompiled/`
+Output:
 
-## 📊 Status
+- `target/AfterLanguage-1.5.2.jar`
 
-✅ **v1.3.0** - Crowdin Integration Complete (2026-02-07)
+## Documentation
 
-**Progress:**
-- ✅ Core MVP (v1.0.0)
-- ✅ Essential Integrations (v1.1.0)
-- ✅ Dynamic Content & Tooling (v1.2.0)
-- ✅ Crowdin Integration (v1.3.0)
-- ⏸️ Translation Editor GUI (pending v1.4.0)
+- `docs/STATUS.md` - authoritative runtime status and risks
+- `docs/ARCHITECTURE.md` - layers, flows, and boundaries
+- `docs/TESTING.md` - manual validation checklist
+- `docs/CROWDIN_TESTING.md` - Crowdin-specific validation plan
+- `docs/wiki/` - GitHub wiki pages for operators and developers
 
-**What's Working:**
-- ✅ Per-player i18n with hot-reload
-- ✅ Three-tier caching (< 1ms resolution)
-- ✅ ICU pluralization (6 categories)
-- ✅ Dynamic Content API (15+ methods)
-- ✅ Export/Import/Backup system
-- ✅ Crowdin bidirectional sync
-- ✅ Webhook server + auto-sync
-- ✅ Redis multi-server sync
-- ✅ ProtocolLib + PlaceholderAPI integration
+## Performance Note
 
-**Pending:**
-- ⏳ Crowdin integration tests (requires real project)
-- ⏸️ Translation Editor GUI (11% - YAMLs ready)
+AfterLanguage is optimized for high concurrency.
 
-## 📚 Documentation
+Current status:
 
-- [Status](docs/STATUS.md) - Current project state (single source of truth)
-- [Architecture](docs/ARCHITECTURE.md) - Technical architecture reference
-- [Spec](docs/SPEC.md) - Original technical specification
-- [Roadmap](docs/ROADMAP.md) - Future plans (v1.4.0+)
-- [Testing Guide](docs/TESTING.md) - 25 manual test scenarios
-- [Changelog](CHANGELOG.md) - Version history
-- [Crowdin Setup](docs/guides/CROWDIN_SETUP.md) - Crowdin integration guide
-- [Migration Guide](docs/guides/MIGRATION_v1.2.0_to_v1.3.0.md) - Version migration
-- [CLAUDE.md](CLAUDE.md) - Development guidance for AI assistants
-
-## 🔗 Dependencies
-
-**Required:**
-- AfterCore 1.5.2+
-- Java 21
-- MySQL 5.7+
-- Spigot/Paper 1.8.8+
-
-**Optional:**
-- ProtocolLib 5.3.0+ (client locale detection)
-- PlaceholderAPI 2.11.6+ (legacy plugin compat)
-- Redis 6.0+ (multi-server sync)
-- Crowdin account (translation management)
-
-## 📜 License
-
-Proprietary - AfterLands Network
-
----
-
-Built with ❤️ for the AfterLands ecosystem
+- Core path is cache-centric and mostly O(1) lookup.
+- I/O paths are async (DB/filesystem/HTTP/Redis).
+- Main-thread sensitive flows were hardened in `1.5.2`.
